# UT_with_Unity_sample

./: CMakeLists.txt  Makefile  README.md  cmake_build.sh
.github/workflows/: unit_tests.yml
inc/: my_module.h
src/: my_module.c
test/: CMakeLists.txt  test_my_module.c
